frontend + sync lol client + all refactoring before electron
