# internal/dto/current_room_response.go
@@ -1,0 +1,5 @@
+package dto
+
+type CurrentRoomResponse struct {
+	RoomID string `json:"roomId" example:"7936545340-100"`
+}
